<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".projeto_faculdade.DisciplinaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_disciplina"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disciplina"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/eTxtDisciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10">
        <requestFocus/>
    </EditText>

    <Button
        android:id="@+id/btnDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"/>

</LinearLayout>